==> vedderb/bldc/ChibiOS_2.6.6/os/hal/platforms/AT91SAM7/spi_lld.c <==
#include "ch.h"
#include "hal.h"

void spi_lld_init(void) {

#if AT91SAM7_SPI_USE_SPI0
  spiObjectInit(&SPID1);
  SPID1.spi = AT91C_BASE_SPI0;
  spi_init(AT91C_BASE_SPI0);
  AT91C_BASE_PIOA->PIO_PDR   = SPI0_MISO | SPI0_MOSI | SPI0_SCK;
  AT91C_BASE_PIOA->PIO_ASR   = SPI0_MISO | SPI0_MOSI | SPI0_SCK;
  AT91C_BASE_PIOA->PIO_PPUDR = SPI0_MISO | SPI0_MOSI | SPI0_SCK;
  AIC_ConfigureIT(AT91C_ID_SPI0,
                  AT91C_AIC_SRCTYPE_HIGH_LEVEL | AT91SAM7_SPI0_PRIORITY,
                  SPI0IrqHandler);
#endif

#if AT91SAM7_SPI_USE_SPI1
  spiObjectInit(&SPID2);
  SPID2.spi = AT91C_BASE_SPI1;
  spi_init(AT91C_BASE_SPI1);
  AT91C_BASE_PIOA->PIO_PDR   = SPI1_MISO | SPI1_MOSI | SPI1_SCK;
  AT91C_BASE_PIOA->PIO_BSR   = SPI1_MISO | SPI1_MOSI | SPI1_SCK;
  AT91C_BASE_PIOA->PIO_PPUDR = SPI1_MISO | SPI1_MOSI | SPI1_SCK;
  AIC_ConfigureIT(AT91C_ID_SPI1,
                  AT91C_AIC_SRCTYPE_HIGH_LEVEL | AT91SAM7_SPI1_PRIORITY,
                  SPI1IrqHandler);
#endif
}

void spi_lld_start(SPIDriver *spip) {

  if (spip->state == SPI_STOP) {
#if AT91SAM7_SPI_USE_SPI0
    if (&SPID1 == spip) {
      /* Clock activation.*/
      AT91C_BASE_PMC->PMC_PCER = (1 << AT91C_ID_SPI0);
      /* Enables associated interrupt vector.*/
      AIC_EnableIT(AT91C_ID_SPI0);
    }
#endif
#if AT91SAM7_SPI_USE_SPI1
    if (&SPID2 == spip) {
      /* Clock activation.*/
      AT91C_BASE_PMC->PMC_PCER = (1 << AT91C_ID_SPI1);
      /* Enables associated interrupt vector.*/
      AIC_EnableIT(AT91C_ID_SPI1);
    }
#endif
  }
  /* Configuration.*/
  spip->spi->SPI_CSR[0] = spip->config->csr;
}

void spi_lld_stop(SPIDriver *spip) {

  if (spip->state != SPI_STOP) {
#if AT91SAM7_SPI_USE_SPI0
    if (&SPID1 == spip) {
      AT91C_BASE_PMC->PMC_PCDR = (1 << AT91C_ID_SPI0);
      AIC_DisableIT(AT91C_ID_SPI0);
    }
#endif
#if AT91SAM7_SPI_USE_SPI1
    if (&SPID1 == spip) {
      AT91C_BASE_PMC->PMC_PCDR = (1 << AT91C_ID_SPI1);
      AIC_DisableIT(AT91C_ID_SPI0);
    }
#endif
  }
}

void spi_lld_ignore(SPIDriver *spip, size_t n) {

  spip->spi->SPI_TCR  = n;
  spip->spi->SPI_RCR  = n;
  spip->spi->SPI_TPR  = (AT91_REG)idle_buf;
  spip->spi->SPI_RPR  = (AT91_REG)idle_buf;
  spip->spi->SPI_IER  = AT91C_SPI_ENDRX;
  spip->spi->SPI_CR   = AT91C_SPI_SPIEN;
  spip->spi->SPI_PTCR = AT91C_PDC_RXTEN | AT91C_PDC_TXTEN;
}

void spi_lld_exchange(SPIDriver *spip, size_t n,
                      const void *txbuf, void *rxbuf) {

  spip->spi->SPI_TCR  = n;
  spip->spi->SPI_RCR  = n;
  spip->spi->SPI_TPR  = (AT91_REG)txbuf;
  spip->spi->SPI_RPR  = (AT91_REG)rxbuf;
  spip->spi->SPI_IER  = AT91C_SPI_ENDRX;
  spip->spi->SPI_CR   = AT91C_SPI_SPIEN;
  spip->spi->SPI_PTCR = AT91C_PDC_RXTEN | AT91C_PDC_TXTEN;
}

void spi_lld_send(SPIDriver *spip, size_t n, const void *txbuf) {

  spip->spi->SPI_TCR  = n;
  spip->spi->SPI_RCR  = n;
  spip->spi->SPI_TPR  = (AT91_REG)txbuf;
  spip->spi->SPI_RPR  = (AT91_REG)idle_buf;
  spip->spi->SPI_IER  = AT91C_SPI_ENDRX;
  spip->spi->SPI_CR   = AT91C_SPI_SPIEN;
  spip->spi->SPI_PTCR = AT91C_PDC_RXTEN | AT91C_PDC_TXTEN;
}

void spi_lld_receive(SPIDriver *spip, size_t n, void *rxbuf) {

  spip->spi->SPI_TCR  = n;
  spip->spi->SPI_RCR  = n;
  spip->spi->SPI_TPR  = (AT91_REG)idle_buf;
  spip->spi->SPI_RPR  = (AT91_REG)rxbuf;
  spip->spi->SPI_IER  = AT91C_SPI_ENDRX;
  spip->spi->SPI_CR   = AT91C_SPI_SPIEN;
  spip->spi->SPI_PTCR = AT91C_PDC_RXTEN | AT91C_PDC_TXTEN;
}
